<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/upperWeartext"
                android:textSize="14sp"
                android:padding="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/upperWear"
                android:layout_marginTop="56dp"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/upperWearList"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottomWeartext"
                android:textSize="14sp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/bottomWear"
                android:layout_marginTop="8dp"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomWearList"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/footWeartext"
                android:textSize="14sp"
                android:padding="6dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/footWear"
                />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/footWearList"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:reverseLayout="true"
        />
        </LinearLayout>
    </ScrollView>
</LinearLayout>