<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:swipedeck="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.kunalparte.mystyleguide.Activities.ShowSuggestionsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/messageText"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:text="Swipe Right to Bookmark"
        android:layout_margin="8dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/messageText">

        <com.daprlabs.cardstack.SwipeLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.daprlabs.cardstack.SwipeDeck
                android:id="@+id/upperWearSwipeDeck"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardview_height"
                android:layout_margin="8dp"
                swipedeck:card_spacing="10dp"
                swipedeck:max_visible="3"
                swipedeck:render_above="true"
                swipedeck:rotation_degrees="15"
                swipedeck:opacity_end="0.2"
                />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="8dp"
                swipedeck:card_spacing="10dp"
                android:visibility="gone"
                android:id="@+id/noDataUpperWear">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/noUpperWearData"
                    android:textSize="16sp"
                    android:textColor="@color/grey"/>

            </android.support.v7.widget.CardView>
            <com.daprlabs.cardstack.SwipeDeck
                android:id="@+id/bottomWearSwipeDeck"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:layout_margin="8dp"
                swipedeck:card_spacing="10dp"
                swipedeck:max_visible="3"
                swipedeck:render_above="true"
                swipedeck:rotation_degrees="15"
                swipedeck:opacity_end="0.99"
                />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="8dp"
                swipedeck:card_spacing="10dp"
                android:visibility="gone"
                android:id="@+id/noDatabottomWear">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/noBottomrWearData"
                    android:textSize="16sp"
                    android:textColor="@color/grey"/>

            </android.support.v7.widget.CardView>
            <com.daprlabs.cardstack.SwipeDeck
                android:id="@+id/footWearSwipeDeck"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:layout_margin="8dp"
                swipedeck:card_spacing="10dp"
                swipedeck:max_visible="3"
                swipedeck:render_above="true"
                swipedeck:rotation_degrees="15"
                swipedeck:opacity_end="0.2"
                />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="8dp"
                swipedeck:card_spacing="10dp"
                android:visibility="gone"
                android:id="@+id/noDataFootWear">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/noFootWearData"
                    android:textSize="16sp"
                    android:textColor="@color/grey"/>

            </android.support.v7.widget.CardView>

        </com.daprlabs.cardstack.SwipeLinearLayout>

    </ScrollView>
</RelativeLayout>
