<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.kunalparte.mystyleguide.Fragments.ProductSuggestionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="@dimen/elevation"
                app:layout_collapseMode="pin"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                app:cardBackgroundColor="@color/lightGrey"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/formalsWear">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lifestyletext"
                        android:text="@string/formalText"
                        android:background="@color/maroon"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="@dimen/product_header"
                        android:textColor="@color/white"
                        android:padding="8dp"/>
                    <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:id="@+id/formalCategoryList"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="@dimen/elevation"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                app:layout_collapseMode="pin"
                app:cardBackgroundColor="@color/lightGrey"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/casualWear">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/casualCategoryText"
                        android:background="@color/maroon"
                        android:text="@string/casualText"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="@dimen/product_header"
                        android:textColor="@color/white"
                        android:padding="8dp"/>
                    <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:id="@+id/casualCategoryList"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="@dimen/elevation"
                app:layout_collapseMode="pin"
                android:descendantFocusability="blocksDescendants"
                android:clickable="true"
                app:cardBackgroundColor="@color/lightGrey"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/gymSuitCard">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/gymSuitText"
                        android:background="@color/maroon"
                        android:textColor="@color/white"
                        android:text="@string/gymSuitText"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="@dimen/product_header"
                        android:padding="8dp"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:id="@+id/gymSuitList"/>
               </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="@dimen/elevation"
                app:layout_collapseMode="pin"
                android:descendantFocusability="beforeDescendants"
                android:clickable="true"
                app:cardBackgroundColor="@color/lightGrey"
                android:id="@+id/partyWearC">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/partyWear">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/partyWearCategoryText"
                        android:background="@color/maroon"
                        android:textColor="@color/white"
                        android:text="@string/partyWerText"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="@dimen/product_header"
                        android:padding="8dp"/>
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:id="@+id/partyWearCategoryList"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
